Shorten duration of single test to 14s. Fix error where top part of introduction not visible on smaller screens. Small changes to Introduction text

--- a/public/style.css
+++ b/public/style.css
@@ -11,12 +11,17 @@
 .App {
   /*font-family: nsm;*/
   font-size: 18px;
-  margin: 0;
   position: absolute;
-  min-width: 75%;
   left: 50%;
   top: 50%;
+  overflow: scroll;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+
+  min-width: 75%;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: auto;
 }
 
 
